syntax = "proto3";

package flipt.manage;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "go.flipt.io/flipt/rpc/flipt/manage";

message GetNamespaceRequest {
  string reference = 1;
  string key = 2;
}

message Namespace {
  string key = 1;
  repeated Flag flags = 2;
  repeated Segment segments = 3;
}

enum FlagType {
  VARIANT_FLAG_TYPE = 0;
  BOOLEAN_FLAG_TYPE = 1;
}

message Flag {
  string namespace = 1;
  FlagType type = 2;
  string key = 3;
  string name = 4;
  string description = 5;
  bool enabled = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  repeated Variant variants = 9;
  repeated Rule rules = 10;
  repeated Rollout rollouts = 11;
}

message Variant {
  string key = 1;
  string name = 2;
  string description = 3;
  string attachment = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

enum SegmentOperator {
  OR_SEGMENT_OPERATOR = 0;
  AND_SEGMENT_OPERATOR = 1;
}

message Rule {
  SegmentOperator segment_operator = 1;
  repeated string segments = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
  repeated Distribution distributions = 5;
}

message Distribution {
  string variant = 1;
  float rollout = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

enum RolloutType {
  UNKNOWN_ROLLOUT_TYPE = 0;
  SEGMENT_ROLLOUT_TYPE = 1;
  THRESHOLD_ROLLOUT_TYPE = 2;
}

message Rollout {
  RolloutType type = 1;
  int32 rank = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  oneof rule {
    RolloutSegment segment = 20;
    RolloutThreshold threshold = 21;
  }
}

message RolloutSegment {
  bool value = 1;
  repeated string segments = 2;
  SegmentOperator segment_operator = 3;
}

message RolloutThreshold {
  float percentage = 1;
  bool value = 2;
}

enum MatchType {
  ALL_MATCH_TYPE = 0;
  ANY_MATCH_TYPE = 1;
}

message Segment {
  string namespace = 1;
  MatchType match_type = 2;
  string key = 3;
  string name = 4;
  string description = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  repeated Constraint constraints = 8;
}

enum ComparisonType {
  UNKNOWN_COMPARISON_TYPE = 0;
  STRING_COMPARISON_TYPE = 1;
  NUMBER_COMPARISON_TYPE = 2;
  BOOLEAN_COMPARISON_TYPE = 3;
  DATETIME_COMPARISON_TYPE = 4;
}

message Constraint {
  ComparisonType type = 1;
  string property = 2;
  string operator = 3;
  string value = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  string description = 7;
}

message Proposal {
    string id = 1;
}

service ManageService {
  rpc GetNamespace(GetNamespaceRequest) returns (Namespace) {}
  rpc PutFlag(Flag) returns (Proposal) {}
  rpc PutSegment(Segment) returns (Proposal) {}
}
